# tiago_bartender_mtc

./: CMakeLists.txt  package.xml
action/: .PickBottle.action.swp  Pick.action  PickBottle.action  Place.action  Pour.action
cadb/: arm_torso_2018-06-22T15:16:23.173744.ompldb  manifest
config/: pouring.yaml
data/: table_bar.scene  tiago_joints.plotjuggler.xml
launch/: demo.launch  gripper_controller.launch  manipulation_server.launch
scripts/: action_pick_orange  action_pick_orange_juice  action_place  action_place_pick  action_pour_glass  attach_coke  clear_costmaps  confirm_execution  deny_execution  detach_coke  plot_joints  pose_tiago_before_glass  pose_tiago_in_front_of_coke  pose_tiago_in_front_of_glass  pose_tiago_in_front_of_orange_juice  pose_tiago_in_front_of_tequila  pose_tiago_neutral  setup_scene
src/: construct_constraint_database.cpp  tiago_bartender_mtc_server.cpp  tiago_bartender_pick_server.cpp  tiago_bottle_pick.cpp  tiago_bottle_pick_server.cpp  tiago_bottle_pour.cpp  tiago_gripper_controller.cpp  tiago_test_path_constraint.cpp
