<?xml version="1.0"?>
<package>
  <name>tiago_barkeeper_mtc</name>
  <version>0.0.0</version>
  <description>The tiago_barkeeper_mtc package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>moveit_task_constructor_core</build_depend>
  <run_depend>moveit_task_constructor_core</run_depend>

  <build_depend>mtc_pour</build_depend>
  <run_depend>mtc_pour</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
