<?xml version="1.0"?>
<package>
  <name>tiago_bartender_mtc</name>
  <version>0.0.0</version>
  <description>The tiago_bartender_mtc package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>moveit_task_constructor_core</build_depend>
  <run_depend>moveit_task_constructor_core</run_depend>

  <build_depend>mtc_pour</build_depend>
  <run_depend>mtc_pour</run_depend>

  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>pal_interaction_msgs</build_depend>
  <run_depend>pal_interaction_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
